# ReelMind

./: .gitignore  Makefile  README.md  docker-compose.yml  evaluation_results.json  pyproject.toml  run_local.sh  start_servers.sh
docs/: ARCHITECTURE.md  EVALUATION.md  EXPLANATION_FOR_BEGINNERS.md  PROJECT_OVERVIEW.md  SYSTEM_DESIGN.md
frontend/: analytics.html  analytics.js  app.js  dashboard.html  dashboard.js  index.html  styles.css
infra/monitoring/: prometheus.yml
infra/monitoring/grafana/dashboards/: reelmind.json
infra/postgres/: init.sql
ml/: __init__.py
ml/data_simulator/: __init__.py  cli.py  distributions.py  generator.py  schemas.py  streaming_emitter.py
ml/data_simulator/tests/: test_generator.py
ml/training/: cli.py  dataset.py  evaluate.py  train_deepfm.py  train_preranker.py  train_two_tower.py
scripts/: benchmark.py  populate_index.py
services/: __init__.py
services/api_gateway/: __init__.py  main.py  service_client.py  session_store.py
services/api_gateway/tests/: __init__.py  test_gateway.py
services/feature_engine/: __init__.py  feature_store.py  main.py
services/feature_engine/tests/: __init__.py  test_features.py
services/ranking/: deepfm.py  main.py  preranker.py
services/ranking/tests/: __init__.py  test_ranking.py
services/retrieval/: __init__.py  faiss_index.py  main.py  two_tower.py
services/retrieval/tests/: __init__.py  test_retrieval.py
services/rl_optimizer/: __init__.py  bandits.py  main.py
services/rl_optimizer/tests/: __init__.py  test_bandits.py
