[project]
name = "reelmind"
version = "0.1.0"
description = "Production-grade short-video recommendation infrastructure platform"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Varun Patil"},
]

dependencies = [
    # Core ML
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.38.0",
    "sentence-transformers>=2.5.0",
    "lightgbm>=4.3.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",

    # Retrieval
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",

    # Serving
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "grpcio>=1.62.0",
    "protobuf>=4.25.0",

    # Streaming
    "confluent-kafka>=2.3.0",

    # Feature Store
    "feast>=0.36.0",

    # Data
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "polars>=0.20.0",

    # Infrastructure
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",

    # MLOps
    "mlflow>=2.11.0",

    # Monitoring
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=6.1.0",

    # Utilities
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
gpu = [
    "faiss-gpu>=1.8.0",
    "tritonclient[all]>=2.43.0",
]
rl = [
    "ray[rllib]>=2.9.0",
]
llm = [
    "vllm>=0.3.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
]

[project.scripts]
reelmind-generate = "ml.data_simulator.cli:main"
reelmind-train = "ml.training.cli:main"
reelmind-bench = "benchmarks.cli:main"

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["services*", "ml*", "benchmarks*", "proto*", "configs*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["services", "ml", "benchmarks"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
